# Stars

./: .gitignore  CMakeLists.txt  ReadMe.txt  Resource.h  Stars.cpp  Stars.h  Stars.rc  Stars.sln  Stars.vcproj  Stars.vcxproj  Stars.vcxproj.filters  StarsDlg.cpp  StarsDlg.h  StarsWnd.cpp  StarsWnd.h  pchheader.cpp  pchheader.h  stdafx.cpp  stdafx.h
res/: Stars.rc2
